--- a/Day - 38 Task/Hall-Booking-API/package.json
+++ b/Day - 38 Task/Hall-Booking-API/package.json
@@ -10,9 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body": "^5.1.0",
     "body-parser": "^1.20.2",
-    "express": "^4.19.2",
-    "parser": "^0.1.4"
+    "express": "^4.19.2"
   }
 }
