--- a/URL Shotener/back-end/.env
+++ b/URL Shotener/back-end/.env
@@ -1,7 +1,5 @@
 PORT=5000
-MONGO_URI= "mongodb+srv://itzgobi3108:gobi3108@cluster0.ljdtaim.mongodb.net/URL-Shortener-Application"
-JWT_SECRET= url-shortenr
-EMAIL_SERVICE= itzgobi3108@gmil.com
-EMAIL_USER= itzgobi3108@gmil.com
+MONGO_URI= "mongodb+srv://itzgobi3108:gobi3108@cluster0.ljdtaim.mongodb.net/URL-Shortener"
+JWT_SECRET= URLSHORTENER
+EMAIL_USER= itzgobi3108@gmail.com
 EMAIL_PASS= qjcq wrgd ljfz nfle
-CLIENT_URL= http://localhost:3000
