--- a/Day - 42 Task/back-end/.env
+++ b/Day - 42 Task/back-end/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI= mongodb+srv://gobi3108:gobi3108@my-projects.j7pq5ca.mongodb.net/URL-Shortener
+MONGO_URI= mongodb+srv://itzgobi3108:gobi3108@cluster0.ljdtaim.mongodb.net/url-shortener
 JWT_SECRET= SECRECT
 EMAIL_SERVICE= gmail
 EMAIL_USERNAME= itzgobi3108@gmail.com
